Debug script for launching dqo with a debugger support from the command line.