@@ -15,4 +15,5 @@
 @REM limitations under the License.
 @REM
 
-"%DQO_RUNNER%" -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005 -Xmx2048m -XX:TieredStopAtLevel=1 --add-opens java.base/java.nio=ALL-UNNAMED -Djava.library.path="%DQO_HOME%\bin" -cp "%DQO_LAUNCH_CLASSPATH%" org.springframework.boot.loader.JarLauncher %*
+SET DQO_JAVA_OPTS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
+"%~dp0dqo.cmd" %*
